--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.0-alpha3",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.0.3",
     "express-handlebars": "^7.0.7",
